<resources>
    <string name="app_name">ArquitecturaMVPBase</string>
    <string name="product_name">Nombre:</string>
    <string name="product_description">Descripción:</string>
    <string name="product_quantity">Cantidad:</string>
    <string name="product_price">Precio:</string>
    <string name="loading_message">Cargando...</string>
    <string name="hint_product_add_edittext_name">Nombre</string>
    <string name="hint_product_add_edittext_description">Descripción</string>
    <string name="hint_product_add_edittext_quantity">Cantidad</string>
    <string name="hint_product_add_edittext_price">Precio</string>
    <string name="product_add_button_crear">Crear</string>
    <string name="product_detail_button_eliminar">Eliminar</string>
    <string name="validate_internet">No hay internet!</string>
    <string name="delete_correct">Eliminado satisfactoriamente</string>
    <string name="error">Ha ocurrido un error</string>
</resources>
