<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="co.com.etn.arquitecturamvpbase.view.activity.ProductAddActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_add_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_add_edittext_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_add_edittext_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_add_edittext_description"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_add_edittext_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_add_edittext_quantity"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_add_edittext_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_add_edittext_price"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/product_add_button_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_add_button_crear"
        android:layout_gravity="center"
        android:enabled="false"
        android:background="@color/colorDisabled"/>

</LinearLayout>
