<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.4"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/empanada"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_marginLeft="20dp">
        <TextView
            android:id="@+id/product_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/product_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:layout_below="@id/product_detail_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/product_detail_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:layout_below="@id/product_detail_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/product_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_below="@id/product_detail_quantity"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/product_detail_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/product_detail_description_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:layout_below="@id/product_detail_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/product_detail_quantity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity"
            android:layout_below="@id/product_detail_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/product_detail_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_below="@id/product_detail_quantity"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/product_detail_button_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_detail_button_eliminar"
        android:layout_gravity="center" />

</LinearLayout>